# HarmonyHoundPy

./: .gitignore  pyproject.toml
migration/: env.py
src/harmony_hound/adapters/database/: connection.py
src/harmony_hound/application/common/: settings.py
src/harmony_hound/main/: bot.py  config.py
src/harmony_hound/presentation/telegram/routers/: user.py
src/harmony_hound/presentation/telegram/services/: google_drive_service.py  recognition_service.py
